# vmette

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/vmette/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/vmette-assets/: Cargo.toml  README.md
crates/vmette-assets/src/: lib.rs
crates/vmette-cli/: Cargo.toml
crates/vmette-cli/src/: desktop.rs  main.rs
crates/vmette-daemon/: Cargo.toml
crates/vmette-daemon-client/: Cargo.toml
crates/vmette-daemon-client/src/: lib.rs
crates/vmette-daemon/benches/: settle.rs
crates/vmette-daemon/src/: lib.rs  main.rs  registry.rs
crates/vmette-image/src/: lib.rs
crates/vmette-mcp/: Cargo.toml
crates/vmette-mcp/src/: daemon_client.rs  main.rs  sandbox.rs  server.rs
crates/vmette-proto/: Cargo.toml  README.md
crates/vmette-proto/src/: agent.rs  boot.rs  daemon.rs  lib.rs
crates/vmette-provider-oci/: Cargo.toml  README.md
crates/vmette-provider-oci/src/: lib.rs
crates/vmette-provider-squashfs/: Cargo.toml  README.md
crates/vmette-provider-squashfs/src/: lib.rs
crates/vmette-provider-tar/: Cargo.toml  README.md
crates/vmette-provider-tar/src/: lib.rs
crates/vmette-providers/: Cargo.toml  README.md
crates/vmette/examples/: capture_spike.rs  inproc_soak_spike.rs  minimal.rs  serial_capture_spike.rs  three_console_boot_spike.rs
crates/vmette/include/: vmette.h
crates/vmette/src/: boot.rs  cmdline.rs  desktop.rs  error.rs  ffi.rs  lib.rs  lifecycle.rs  provider.rs  session.rs  settle.rs  terminal.rs
crates/vmette/src/vz/: config.rs  delegate.rs  mod.rs  snapshot.rs  vsock.rs
docs/: API.md  ARCH-V2-PLAN.md  ARCH-V2-SPEC.md  CLI.md  DAEMON.md  DESKTOP.md  HACKING.md  MCP.md  PROVIDERS.md  README.md
guest/: vmette-desktop-agent.c
images/vmette-desktop/: Dockerfile  entrypoint.sh  vmette-desktop-run.sh
scripts/: build-desktop-agent-static.sh  build-desktop-agent.sh  build-desktop-image.sh  build-initramfs.sh  build-vsock-send.sh  custom-init.sh  fetch-alpine-rootfs.sh  fetch-assets.sh  install.sh  release.sh  run.sh
tests/: desktop.sh  run.sh  view.sh
tests/mcp/: README.md  call.py  desktop_e2e.py  driver.py
vmette/: main.m  vsock-runner.c  vsock-send.c
