[package]
name        = "vmette-assets"
description = "Shared boot-asset (kernel + initramfs) discovery for vmette binaries"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
keywords    = ["vmette", "microvm", "boot", "kernel", "initramfs"]
categories  = ["virtualization"]
readme      = "README.md"

[lib]
name = "vmette_assets"
path = "src/lib.rs"

[dependencies]
