[package]
name        = "vmette-assets"
description = "Shared boot-asset (kernel + initramfs) discovery for vmette binaries"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
keywords    = ["vmette", "microvm", "boot", "kernel", "initramfs"]
categories  = ["virtualization"]
readme      = "README.md"

[lib]
name = "vmette_assets"
path = "src/lib.rs"

[dependencies]
# Only for the `ShareMount` returned by `resolve_ca_share`. vmette-proto is a
# tiny serde-only leaf; this keeps the "resolve the CA share" logic in one place.
vmette-proto = { workspace = true }
