[package]
name        = "vmette-daemon-client"
description = "Synchronous client transport for the vmetted desktop-session socket protocol"
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
repository  .workspace = true
# Internal transport shared by the `vmette` CLI and `vmette-mcp` (both binaries,
# both publish=false). Not part of the public library surface, and no published
# crate depends on it — so it is not published to crates.io.
publish = false

[lib]
name = "vmette_daemon_client"
path = "src/lib.rs"

[dependencies]
vmette-proto  = { workspace = true }
vmette-assets = { workspace = true }
serde_json    = { workspace = true }
libc          = { workspace = true }
