[package]
name        = "vmette-daemon"
description = "Long-lived UNIX-socket daemon dispatching guests via vmette"
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
repository  .workspace = true
# Distributed via the release tarball + install.sh (macOS-only, codesigned),
# not crates.io.
publish = false

[[bin]]
name = "vmetted"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
serde_json  = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow      = "1"
# In-process desktop sessions: the daemon hosts live vmette::Session VMs
# (Agent workload) and resolves their rootfs images via the shared provider
# registry. The socket wire types come from vmette-proto.
vmette            = { workspace = true }
vmette-proto      = { workspace = true }
vmette-providers  = { workspace = true }
# Shared cache-root / socket-path discovery (single source of truth with the
# CLI and MCP server, so all three agree on where the cache and socket live).
vmette-assets     = { workspace = true }
base64      = "0.22"
rand        = "0.8"
# Decode the agent's screenshot PNGs into raw pixels for the host-side
# settle detector. Lives only in the daemon binary — the size-sensitive core
# vmette cdylib/staticlib stays PNG-decoder-free.
png         = "0.17"

# Microbenchmark for the pure settle detector (see benches/settle.rs). Plain
# `main()` harness — no criterion dep — run with `cargo bench -p vmette-daemon`.
[[bench]]
name = "settle"
harness = false
