[package]
name        = "vmette-mcp"
description = "Model Context Protocol server exposing vmette as a sandbox for AI agents"
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
repository  .workspace = true
# Distributed via the release tarball + install.sh (macOS-only, codesigned),
# not crates.io.
publish = false

[[bin]]
name = "vmette-mcp"
path = "src/main.rs"

[dependencies]
vmette           = { workspace = true }
vmette-daemon-client = { workspace = true }
vmette-assets    = { workspace = true }
vmette-proto     = { workspace = true }
vmette-providers = { workspace = true }
rmcp      = { version = "1.7", features = ["server", "macros", "transport-io", "schemars"] }
schemars  = "1"
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
base64    = "0.22"
anyhow    = "1"
thiserror = "1"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid      = { version = "1", features = ["v4"] }
libc      = { workspace = true }
nix       = { workspace = true, features = ["fs", "process"] }
url       = "2"
