[package]
name        = "vmette-provider-oci"
description = "OCI/Docker image rootfs provider for vmette"
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
repository  .workspace = true
keywords    = ["vmette", "oci", "docker", "rootfs", "container"]
categories  = ["virtualization", "filesystem"]

[dependencies]
vmette     = { workspace = true }
oci-client = { version = "0.17", default-features = false, features = ["rustls-tls"] }
tokio      = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros"] }
tar        = "0.4"
flate2     = "1"
zstd       = "0.13"
thiserror  = "1"
tracing    = "0.1"
serde_json = "1"
base64     = "0.22"
