[package]
name        = "vmette-provider-squashfs"
description = "Prebuilt squashfs block-image rootfs provider for vmette"
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
repository  .workspace = true
keywords    = ["vmette", "squashfs", "rootfs", "block-image", "microvm"]
categories  = ["virtualization", "filesystem"]
readme      = "README.md"

# Depends on vmette (macOS-only), so it can't build on the Linux host docs.rs
# uses by default — pin its build to the Apple targets.
[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]

[dependencies]
vmette    = { workspace = true }
ureq      = { version = "2", default-features = false, features = ["tls"] }
thiserror = "1"
tracing   = "0.1"
