[package]
name        = "vmette-provider-tar"
description = "Tarball-over-HTTP/file rootfs provider for vmette"
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
repository  .workspace = true
keywords    = ["vmette", "tar", "rootfs", "tarball", "microvm"]
categories  = ["virtualization", "filesystem"]
readme      = "README.md"

# Depends on vmette (macOS-only), so it can't build on the Linux host docs.rs
# uses by default — pin its build to the Apple targets.
[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]

[dependencies]
vmette    = { workspace = true }
ureq      = { version = "2", default-features = false, features = ["tls"] }
tar       = "0.4"
flate2    = "1"
zstd      = "0.13"
thiserror = "1"
tracing   = "0.1"
