[package]
name        = "vmette-providers"
description = "The default rootfs-provider registry for vmette (dir + squashfs + tar + OCI, in resolution order)"
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
repository  .workspace = true
keywords    = ["vmette", "rootfs", "oci", "squashfs", "microvm"]
categories  = ["virtualization", "filesystem"]

[lib]
name = "vmette_providers"
path = "src/lib.rs"

[dependencies]
vmette                   = { workspace = true }
vmette-provider-oci      = { workspace = true }
vmette-provider-squashfs = { workspace = true }
vmette-provider-tar      = { workspace = true }
