[package]
name        = "vmette-providers"
description = "The default rootfs-provider registry for vmette (dir + squashfs + tar + OCI, in resolution order)"
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
repository  .workspace = true
keywords    = ["vmette", "rootfs", "oci", "squashfs", "microvm"]
categories  = ["virtualization", "filesystem"]
readme      = "README.md"

# Depends on vmette (macOS-only), so it can't build on the Linux host docs.rs
# uses by default — pin its build to the Apple targets.
[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]

[lib]
name = "vmette_providers"
path = "src/lib.rs"

[dependencies]
vmette                   = { workspace = true }
vmette-provider-oci      = { workspace = true }
vmette-provider-squashfs = { workspace = true }
vmette-provider-tar      = { workspace = true }
